; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/accel/extr_mma9551_core.c_mma9551_read_status_word.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/accel/extr_mma9551_core.c_mma9551_read_status_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }

@MMA9551_CMD_READ_STATUS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mma9551_read_status_word(%struct.i2c_client* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.i2c_client*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %11 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @MMA9551_CMD_READ_STATUS, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @mma9551_transfer(%struct.i2c_client* %11, i32 %12, i32 %13, i32 %14, i32* null, i32 0, i32* %10, i32 2)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %10, align 4
  %17 = call i32 @be16_to_cpu(i32 %16)
  %18 = load i32*, i32** %8, align 8
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* %9, align 4
  ret i32 %19
}

declare dso_local i32 @mma9551_transfer(%struct.i2c_client*, i32, i32, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @be16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
